--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ TELEGRAM_BOT_TOKEN='5948965896:AAFt2wPLOvnVLGPTzTFn2Qk_LYH2moKcLkA'
 YOOKASSA_SHOP_ID='1147466'
 YOOKASSA_SECRET_KEY='test_so2kobxdhmCZkZBDhl8s-G2D77k1B-Gbh6ZCqVZcClw'
 CHANNEL_ID='-1002735254657'
-WEBHOOK_URL=''
+PORT=3000
+DOMAIN='german-service.site'
